# rag

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
rag/: admin.py  models.py  serializers.py  urls.py  views.py
rag/migrations/: 0001_initial.py  0002_documentchunk_knowledgebase_description_and_more.py
shared/: models.py  serializers.py
shared/management/commands/: dev_celery.py  dev_celery_beat.py  wait_for_db.py
shared/utils/: ip_addr.py  response.py
user/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_usersession_jti.py
