[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "django-redis>=7.0.0",
    "django-rest-framework>=0.1.0",
    "django-user-agents>=0.4.0",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=5.2.0",
    "ua-parser>=1.0.2",
    "user-agents>=2.2.0",
    "watchfiles>=1.0.0",
]
